fixing horizontal scroll

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,7 @@ p {
 }
 
 h2 {
-  margin: 40px 20px 20px;
+  margin: 20px;
 }
 
 
